<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingTop="16dp"
    android:paddingRight="18dp"
    android:paddingBottom="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <CheckBox
                android:id="@+id/rememberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="16dp"
                android:text="@string/remember_me" />

            <Button
                android:id="@+id/login"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#f16f7d"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:gravity="center_horizontal"
                android:id="@+id/register"
                android:layout_width="199dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="6dp"
                android:text="@string/new_user_register"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>