<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@android:color/transparent"
                android:drawablePadding="12dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:hint="@string/user_name"
                android:maxLines="1"
                android:importantForAutofill="no" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:drawablePadding="12dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:layout_marginTop="4dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registration"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_marginTop="30dp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textColor="#f16f7d"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:layout_marginTop="30dp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textColor="#f16f7d"
                android:padding="16dp"
                android:clickable="true"
                android:focusable="true" />

        </LinearLayout>
    </ScrollView>



</LinearLayout>