<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/PopupOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="-14dp"
                android:contentDescription="@string/todo"
                android:padding="3dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_left_24" />

            <androidx.cardview.widget.CardView
                android:id="@+id/parentCardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_toEndOf="@+id/backBtn">
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/receiverName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="6dp"
                android:layout_toEndOf="@+id/parentCardView"
                android:maxLines="1"
                android:padding="5dp"
                android:textColor="@color/white"
                android:text="@string/profile"
                android:textSize="18sp" />


        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/parent_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="50dp"

                >

                <ImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/avatar_placeholder"
                    android:contentDescription="@string/todo" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>


        <TextView
            android:id="@+id/newPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_new_photo"
            android:textSize="24sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="15dp"
            android:layout_below="@id/parent_image_view"
            android:drawableRight="@drawable/ic_baseline_add_photo_alternate_24"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_below="@+id/newPic"
            android:layout_marginStart="20dp"
            android:background="#808080"

            />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            android:layout_below="@+id/newPic">


            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textSize="24sp" />


        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_below="@+id/ll1"
            android:layout_marginStart="20dp"
            android:background="#808080"

            />


    </RelativeLayout>


</LinearLayout>